[tool.poetry]
name = "gpu"
version = "0.1.0"
description = ""
authors = ["hironow <hironow365@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "^2.0.0+cu118", source = "pytorch" }
numpy = "^1.24.3"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118/"
secondary = true


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
